k8s/charts/cluster-support-new/istio/gateways.yaml
# https://medium.com/@mattiaforc/zero-trust-kubernetes-ingress-with-tailscale-operator-cert-manager-and-external-dns-8f42272f8647
# Argo tunnel domain
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: private
  namespace: istio-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "*.syscd.tech,*.syscd.dev"
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.syscd.tech"
        - "*.syscd.dev"
      tls:
        httpsRedirect: true  # Force HTTPS redirect
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*.syscd.tech"
        - "*.syscd.dev"
      tls:
        mode: SIMPLE
        credentialName: syscd-tls  # Updated to match the new certificate secret name
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: public
  namespace: istio-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "*.syscd.live,*.syscd.xyz"
    external-dns.alpha.kubernetes.io/target: "1b664006-2417-4072-877f-45697ffa642d.cfargotunnel.com"
    # I think this works in the vs https://github.com/kubernetes-sigs/external-dns/issues/2311
    # external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.syscd.live"
        - "*.syscd.xyz"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*.syscd.live"
        - "*.syscd.xyz"
      tls:
        mode: SIMPLE
        credentialName: gateway-public-tls
